change project language to persian.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,19 +8,19 @@
     <link rel="stylesheet" href="./styles/css/style.css">
     <link rel="shortcut icon" href="./assets/Js.jpg" type="image/x-icon">
 </head>
-<body>
+<body dir="rtl">
     <!-- This is Header -->
     <header class="header">
         <h1>Botostart</h1>
         <div class="navbar">
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Support</a></li>
+                    <li><a href="#">خانه</a></li>
+                    <li><a href="#">درباره ما</a></li>
+                    <li><a href="#">حمایت</a></li>
                 </ul>
             </nav>
-            <img src="./assets/Boto.jpg" alt="botostart-logo">
+            <img src="./assets/Boto.jpg" alt="logo-image">
         </div>
         <!-- This is Hamburger Menu -->
         <div class="menu">
@@ -34,22 +34,22 @@
         <!-- Botostart -->
         <main>
             <img src="./assets/Js.jpg">
-            <h2>Botostart</h2>
-            <p>A place to be come programmer</p>
+            <h2>بوتواستارت</h2>
+            <p>مکانی برای برنامه نویس شدن</p>
         </main>
         <!-- Coursers -->
         <aside>
             <div class="course">
-                <p>HTML & CSS Course</p>
+                <p>دوره آموزشی HTML و css</p>
             </div>
             <div class="course">
-                <p>Javascript Course</p>
+                <p>دوره آموزشی Javascript</p>
             </div>
             <div class="course">
-                <p>Sass Course</p>
+                <p>دوره آموزشی Sass</p>
             </div>
             <div class="course">
-                <p>React Course</p>
+                <p>دوره آموزشی React</p>
             </div>
         </aside>
     </div>
@@ -59,29 +59,34 @@
         <div class="card">
             <img src="./assets/angular-logo.png" alt="Angular-image">
             <div class="card-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Egestas purus viverra accumsan in nisl nisi Arcu cursus vitae congue mauris rhoncus aenean vel elit scelerisque In egestas erat imperdiet sed</p>
-                <span>Spring Tofigh</span>
+                <p>
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
+                </p>
+                <span>بهار توفیق</span>
             </div>
         </div>
         <div class="card">
             <img src="./assets/react-icon.png" alt="React-image">
             <div class="card-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Egestas purus viverra accumsan in nisl nisi Arcu cursus vitae congue mauris rhoncus aenean vel elit scelerisque In egestas erat imperdiet sed</p>
-                <span>Spring Tofigh</span>
+                <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
+                </p>
+                <span>بهار توفیق</span>
             </div>
         </div>
         <div class="card">
             <img src="./assets/vuejs-logo.png" alt="Vue-image">
             <div class="card-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Egestas purus viverra accumsan in nisl nisi Arcu cursus vitae congue mauris rhoncus aenean vel elit scelerisque In egestas erat imperdiet sed</p>
-                <span>Spring Tofigh</span>
+                <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
+                </p>
+                <span>بهار توفیق</span>
             </div>
         </div>
         <div class="card">
             <img src="./assets/nuxt-icon.png" alt="Next-image">
             <div class="card-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Egestas purus viverra accumsan in nisl nisi Arcu cursus vitae congue mauris rhoncus aenean vel elit scelerisque In egestas erat imperdiet sed</p>
-                <span>Spring Tofigh</span>
+                <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
+                </p>
+                <span>بهار توفیق</span>
             </div>
         </div>
     </div>
@@ -89,13 +94,15 @@
     <footer>
         <div class="links">
             <ul>
-                <li><a href="#">Rules</a></li>
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">News</a></li>
+                <li><a href="#">قوانین</a></li>
+                <li><a href="#">ارتباط با ما</a></li>
+                <li><a href="#">اخبار</a></li>
             </ul>
         </div>
         <div class="summary">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Egestas purus viverra accumsan in nisl nisi Arcu cursus vitae congue mauris rhoncus aenean vel elit scelerisque In egestas erat imperdiet sed euismod nisi porta lorem mollis</p>
+            <p>
+                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
+            </p>
         </div>
     </footer>
 </body>
