add images folder and change images path

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Botostart</title>
     <link rel="stylesheet" href="./styles/css/style.css">
-    <link rel="shortcut icon" href="./assets/Js.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/Js.jpg" type="image/x-icon">
 </head>
 <body dir="rtl">
     <!-- This is Header -->
@@ -20,7 +20,7 @@
                     <li><a href="#">حمایت</a></li>
                 </ul>
             </nav>
-            <img src="./assets/Boto.jpg" alt="logo-image">
+            <img src="./assets/images/Boto.jpg" alt="logo-image">
         </div>
         <!-- This is Hamburger Menu -->
         <div class="menu">
@@ -33,7 +33,7 @@
     <div class="main">
         <!-- Botostart -->
         <main>
-            <img src="./assets/Js.jpg">
+            <img src="./assets/images/Js.jpg">
             <h2>بوتواستارت</h2>
             <p>مکانی برای برنامه نویس شدن</p>
         </main>
@@ -57,7 +57,7 @@
     <div class="cards">
         <!-- Cards -->
         <div class="card">
-            <img src="./assets/angular-logo.png" alt="Angular-image">
+            <img src="./assets/images/angular-logo.png" alt="Angular-image">
             <div class="card-content">
                 <p>
                     لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="./assets/react-icon.png" alt="React-image">
+            <img src="./assets/images/react-icon.png" alt="React-image">
             <div class="card-content">
                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
                 </p>
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="./assets/vuejs-logo.png" alt="Vue-image">
+            <img src="./assets/images/vuejs-logo.png" alt="Vue-image">
             <div class="card-content">
                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
                 </p>
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="./assets/nuxt-icon.png" alt="Next-image">
+            <img src="./assets/images/nuxt-icon.png" alt="Next-image">
             <div class="card-content">
                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
                 </p>
